--- a/write-it/src/app/modules/auth/login/login-component.html
+++ b/write-it/src/app/modules/auth/login/login-component.html
@@ -1,2 +1,17 @@
-<p>login-component works!</p>
-<p-button label="Check" />
+<div class="login">
+    <div class="title">
+    <span style="color: #02343F; font-size: 25px;">Write it !</span>
+    </div>
+    <div class="input-container">
+    <input class="write-it-input-login" type="text" pInputText />
+    <input class="write-it-input-login" type="text" pInputText />
+    </div>
+    <div class="btn-login-container">
+           <div class="btn-login">
+           <p-button label="log in" (click)="login()"/>
+           </div>
+           <div class="btn-signup">
+           <p-button label="sign up" (click)="signup()"/>
+           </div>
+    </div>
+</div>
