show form register when click sign up

--- a/write-it/src/app/modules/auth/auth-management/auth-management.component.html
+++ b/write-it/src/app/modules/auth/auth-management/auth-management.component.html
@@ -5,7 +5,11 @@
         </span>
     </div>
     <div>
-    <write-it-login/>
-     <!-- <write-it-register/> -->
+        <ng-container *ngIf="isSignUp; else login">
+            <write-it-register />
+        </ng-container>
+        <ng-template #login>
+            <write-it-login />
+        </ng-template>
     </div>
 </div>
