--- a/write-it/src/app/modules/auth/login/login-component.scss
+++ b/write-it/src/app/modules/auth/login/login-component.scss
@@ -1,65 +1,59 @@
-@keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+.input-container {
+    padding-top: 50px;
+    margin-left: 50px;
 
-.login {
-    animation: fade-in 1s ease-in forwards;
-    background-color: #F6F4DE;
-    width: 350px;
-    margin-right: 100px;
-    height: 400px;
-    border-radius: 5px;
-
-    .title {
-        margin-top: 30px;
-        position: absolute;
-        margin-left: 120px;
-    }
-
-    .input-container {
-       padding-top: 50px;
-        margin-left: 50px;
-        .write-it-input-login {
-            margin-top: 20px;
-            background: #F6F4DE;
-            padding-top: 10px !important;
-            width: 250px;
-            height: 50px;
-            border-radius: 5px;
-            border: 1.5px solid #02343F;
-            color: #02343F;
-        }
-    }
-
-    .btn-login-container {
+    .write-it-input-login {
         margin-top: 20px;
-        margin-left: 60px;
-        display: flex;
+        background: #F6F4DE;
+        padding-top: 10px !important;
+        width: 250px;
+        height: 50px;
+        border-radius: 5px;
+        border: 1.5px solid #ACABA3;
+        color: #02343F;
+    }
 
-        .btn-login {
-            ::ng-deep .p-button {
-                color: #F6F4DE !important;
-                width: 90px;
-                height: 50px;
-                font-weight: revert;
-                font-size: 18px;
-                border-radius: 10px;
-            }
+    .click-input {
+        border: 1.5px solid #02343F;
+    }
+
+}
+
+.btn-login-container {
+    display: flex;
+    position: absolute;
+    top: 220px;
+    .btn-login {
+        ::ng-deep .p-button {
+            color: #F6F4DE !important;
+            width: 90px;
+            height: 50px;
+            font-weight: revert;
+            font-size: 18px;
+            border-radius: 10px;
         }
 
-        .btn-signup {
-            ::ng-deep .p-button {
-                background-color: #F6F4DE !important;
-                color: #02343F !important;
-                width: 90px;
-                height: 50px;
-                font-weight: revert;
-                font-size: 18px;
-                border-radius: 10px;
-                border-color: #02343F !important;
-            }
+        ::ng-deep .p-button:hover {
+            background-color: #0d6e81 !important;
+        }
+    }
+
+    .btn-signup {
+        ::ng-deep .p-button {
+            background-color: #F6F4DE !important;
+            color: #044451 !important;
+            width: 90px;
+            height: 50px;
+            font-weight: revert;
+            font-size: 18px;
+            border-radius: 10px;
+            border-color: #044451 !important;
+        }
+
+        ::ng-deep .p-button:hover {
+            background-color: #044451 !important;
+            color: #F6F4DE !important;
+            border-color: #F6F4DE !important;
         }
     }
 }
-
