--- a/write-it/src/app/modules/auth/register/register.component.scss
+++ b/write-it/src/app/modules/auth/register/register.component.scss
@@ -1,41 +1,12 @@
-@keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
 .login {
-    animation: fade-in 1s ease-in forwards;
-    background-color: #F6F4DE;
-    width: 350px;
-    margin-right: 100px;
-    height: 400px;
-    border-radius: 5px;
-
-    .title {
-        margin-top: 30px;
-        position: absolute;
-        margin-left: 120px;
-    }
-
-    .input-container {
-        padding-top: 50px;
-        margin-left: 50px;
-        .write-it-input-login {
-            margin-top: 40px;
-            background: #F6F4DE;
-            padding-top: 10px !important;
-            width: 250px;
-            height: 50px;
-            border-radius: 5px;
-            border: 1.5px solid #02343F;
-            color: #02343F;
-        }
-    }
+    height: 450px !important;
 
     .btn-login-container {
+        display: flex;
+        position: absolute;
+        top: 300px;
+        left: 50px;
         .btn-signup {
-             display: flex;
-             justify-content: center;
             ::ng-deep .p-button {
                 color: #F6F4DE !important;
                 width: 90px;
@@ -44,7 +15,11 @@
                 font-size: 18px;
                 border-radius: 10px;
             }
+
+            ::ng-deep .p-button:hover {
+                background-color: #0d6e81 !important;
+            }
         }
     }
-}
 
+}
