integrated api login and handle behavior show hide login or logout on menu

--- a/write-it/src/app/modules/auth/login/login-component.scss
+++ b/write-it/src/app/modules/auth/login/login-component.scss
@@ -33,7 +33,7 @@
             border-radius: 10px;
         }
 
-        ::ng-deep .p-button:hover {
+        ::ng-deep .p-button:hover:enabled {
             background-color: #0d6e81 !important;
         }
     }
