--- a/write-it/src/app/core/layout/menu/menu.component.html
+++ b/write-it/src/app/core/layout/menu/menu.component.html
@@ -1,4 +1,4 @@
 <p-button icon="pi pi-bars" (click)="showHideMenu()"/>
 <div class="flex justify-center write-it-menu" [class.show]="isShowHideBtn" [class.hide]="!isShowHideBtn">
-    <p-menu [model]="items"/>
+    <p-menu [model]="items" *ngIf="visible"/>
 </div>
