--- a/write-it/src/app/modules/auth/login/login-component.html
+++ b/write-it/src/app/modules/auth/login/login-component.html
@@ -1,4 +1,5 @@
 <div class="login">
+  <p-toast />
   <div class="title">
     <span style="color: #02343F; font-size: 25px; width: 100%;">Write it !</span>
   </div>
@@ -27,7 +28,7 @@
 
     <div class="btn-login-container">
       <div class="btn-login">
-        <p-button label="log in" (click)="login()" />
+        <p-button label="log in" (click)="login()" [disabled]="loginForm.invalid" />
       </div>
       <div class="btn-signup">
         <p-button label="sign up" (click)="signup()" />
