integrated api for use register

--- a/write-it/src/app/modules/auth/register/register.component.html
+++ b/write-it/src/app/modules/auth/register/register.component.html
@@ -1,4 +1,5 @@
 <div class="login">
+      <p-toast />
     <div class="title">
         <span style="color: #02343F; font-size: 25px;">Write it !</span>
     </div>
