integrated api login and register and handle api response error

--- a/write-it/src/app/modules/auth/login/login-component.scss
+++ b/write-it/src/app/modules/auth/login/login-component.scss
@@ -57,3 +57,12 @@
         }
     }
 }
+
+.show-hide-password {
+    margin-top: 0.2px; 
+    margin-right: 50px;
+}
+
+.show-hide-password:hover{
+    cursor: pointer;
+}
