--- a/write-it/src/app/app.html
+++ b/write-it/src/app/app.html
@@ -1,3 +1,6 @@
+<div class="full-screen-overlay" *ngIf="loading">
+<p-progress-spinner class="app-loading" strokeWidth="5"  animationDuration=".5s" [style]="{ width: '50px', height: '50px'}" />
+</div>
 <write-it-header/>
 <ng-container *ngIf="!isEndpointLogin()">
 <write-it-menu/>
