--- a/write-it/src/app/modules/auth/login/login-component.scss
+++ b/write-it/src/app/modules/auth/login/login-component.scss
@@ -66,3 +66,14 @@
 .show-hide-password:hover{
     cursor: pointer;
 }
+
+.forgot-password{
+    margin-left: 190px;
+    margin-top: 10px;
+    color: #044451;
+    a:hover{
+        cursor: pointer;
+        color: #0d6e81;
+    }
+}
+
