--- a/write-it/src/app/modules/auth/register/register.component.scss
+++ b/write-it/src/app/modules/auth/register/register.component.scss
@@ -3,10 +3,13 @@
 
     .btn-login-container {
         display: flex;
-        position: absolute;
-        top: 300px;
-        left: 50px;
+        margin-top: 0px;
+        margin-left: 0px;
+
         .btn-signup {
+            margin-left: 110px;
+            padding-top: 30px;
+
             ::ng-deep .p-button {
                 color: #F6F4DE !important;
                 width: 90px;
@@ -21,5 +24,14 @@
             }
         }
     }
+}
 
+.back-login {
+    position: absolute;
+    margin-left: 100px;
+}
+
+.back-login:hover .p-iconfield p {
+    cursor: pointer;
+    color: red;
 }
