--- a/write-it/src/app/modules/auth/register/register.component.scss
+++ b/write-it/src/app/modules/auth/register/register.component.scss
@@ -2,14 +2,11 @@
     height: 450px !important;
 
     .btn-login-container {
-        display: flex;
         margin-top: 0px;
         margin-left: 0px;
 
         .btn-signup {
             margin-left: 110px;
-            padding-top: 30px;
-
             ::ng-deep .p-button {
                 color: #F6F4DE !important;
                 width: 90px;
@@ -28,10 +25,10 @@
 
 .back-login {
     position: absolute;
-    margin-left: 100px;
+    margin-left: 70px;
 }
 
-.back-login:hover .p-iconfield p {
+.back-login:hover u {
     cursor: pointer;
-    color: red;
+    color: #063e49;
 }
